--- a/css/style.css
+++ b/css/style.css
@@ -979,3 +979,19 @@ h3.my-profession{
   background-color: #0069d9;
 }
 
+
+
+/* project  */
+.project-title ,
+.project-description , 
+.project-tech-stack 
+{ 
+    color: var(--text-black-900);
+    padding-left: 20px;
+}
+
+.project-title{
+    font-size: 22px;
+    color: var(--skin-color);
+    text-align: center;
+}
