--- a/css/style.css
+++ b/css/style.css
@@ -954,6 +954,7 @@ h3.my-profession{
   border-radius: 5px;
   font-size: 18px;
   cursor: pointer;
+  margin-right: 30px;
 }
 
 #resume-button-1:hover,
@@ -971,7 +972,8 @@ h3.my-profession{
   border-radius: 5px;
   font-size: 18px;
   text-decoration: none;
-  padding-right: 10px;
+  margin-right: 30px;
+  margin-left: 30px;
 }
 
 #resume-link-1:hover,
@@ -995,3 +997,5 @@ h3.my-profession{
     color: var(--skin-color);
     text-align: center;
 }
+
+
