--- a/css/style.css
+++ b/css/style.css
@@ -955,6 +955,7 @@ h3.my-profession{
   font-size: 18px;
   cursor: pointer;
   margin-right: 30px;
+  width: 200px;
 }
 
 #resume-button-1:hover,
@@ -974,6 +975,7 @@ h3.my-profession{
   text-decoration: none;
   margin-right: 30px;
   margin-left: 30px;
+  width: 100px;
 }
 
 #resume-link-1:hover,
