--- a/css/style.css
+++ b/css/style.css
@@ -1000,4 +1000,38 @@ h3.my-profession{
     text-align: center;
 }
 
-
+/* skills  */
+.skills-section {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  
+  .skills-card {
+    width: calc(33.33% - 1rem);
+    margin-bottom: 2rem;
+    text-align: center;
+    /* box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); */
+    border-radius: 10px;
+    overflow: hidden;
+  }
+  
+  .skills-card:hover {
+    transform: translateY(-5px);
+    /* box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2); */
+  }
+  
+  .skills-card-img {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    /* border-radius: 50%; */
+  }
+  
+  .skills-card-name {
+    margin-top: 1rem;
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #333;
+  }
+  
